JAMES-3778 Extension example for publishing metrics into Graphite

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
@@ -22,6 +22,8 @@ add features to your SMTP server.
 Writing xref:extending/webadmin-routes.adoc[WebAdmin routes] enables to
 add features to the WebAdmin REST API.
 
+The link:https://github.com/apache/james-project/tree/master/examples[examples] are also a good reference.
+
 == Handling injections for your extensions
 
 === Injecting core components
@@ -129,6 +131,25 @@ public class MyMailet extends GenericMailet {
 ....
 
 Note that overriding injection definitions of the Distributed Server for your injections is not supported.
+
+=== Starting your components
+
+Sometime you wish to 'start' your extensions. This can be achieved through defining your own `UserDefinedStartable`:
+
+```
+public class MyStartable implements UserDefinedStartable {
+    @Override
+    public void start() {
+        // Will be called
+    }
+}
+```
+
+Your startable then needs to be registered within `extensions.properties`:
+
+```
+guice.extension.startable=com.company.MyStartable
+```
 
 == Pre-packaged extensions
 
