--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
@@ -3427,8 +3427,10 @@ processing in. Defaults to the `state` field of each processed email.
 - `consume` (boolean defaulting to `true`) whether the reprocessing should consume the mail in its originating mail repository. Passing
 this value to `false` allows non destructive reprocessing as you keep a copy of the email in the mail repository and can be valuable
 when debugging.
+- `limit` (integer value. Optional, default is empty). It enables to limit the count of elements reprocessed.
+If unspecified the count of the processed elements is unbounded
 
-For instance:
+redeliver_group_events
 
 ....
 curl -XPATCH 'http://ip:port/mailRepositories/var%2Fmail%2Ferror%2F/mails?action=reprocess&processor=transport&queue=spool'
@@ -3814,6 +3816,17 @@ Response codes:
 curl -XPOST http://ip:port/events/deadLetter?action=redeliver
 ....
 
+Additional query parameters are supported:
+
+- `limit` (integer value. Optional, default is empty). It enables to limit the count of elements redelivered.
+If unspecified the count of the processed elements is unbounded
+
+For instance:
+
+....
+curl -XPOST http://ip:port/events/deadLetter?action=redeliver&limit=10
+....
+
 Will create a task that will attempt to redeliver all events stored in
 ``Event Dead Letter''. If successful, redelivered events will then be
 removed from ``Dead Letter''.
@@ -3829,12 +3842,23 @@ Response codes:
 === Redeliver group events
 
 ....
-curl -XPOST http://ip:port/events/deadLetter/groups/org.apache.james.mailbox.events.EventBusTestFixture$GroupA
+curl -XPOST http://ip:port/events/deadLetter/groups/org.apache.james.mailbox.events.EventBusTestFixture$GroupA?action=redeliver
 ....
 
 Will create a task that will attempt to redeliver all events of a
 particular group stored in ``Event Dead Letter''. If successful,
 redelivered events will then be removed from ``Dead Letter''.
+
+Additional query parameters are supported:
+
+- `limit` (integer value. Optional, default is empty). It enables to limit the count of elements redelivered.
+If unspecified the count of the processed elements is unbounded
+
+For instance:
+
+....
+curl -XPOST http://ip:port/events/deadLetter/groups/org.apache.james.mailbox.events.EventBusTestFixture$GroupA?action=redeliver&limit=10
+....
 
 link:#_endpoints_returning_a_task[More details about endpoints returning
 a task].
