--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
@@ -99,6 +99,11 @@ A coma separated list of hosts, example: hosts=ip1:5672,ip2:5672
 
 | event.bus.notification.durability.enabled
 | Whether or not the queue backing notifications should be durable. Optional boolean, defaults to true.
+
+| vhost
+| Optional string. The virtual host used by James to create queues and exchanges on Rabbitmq.
+If omitted, it will use the default Rabbitmq one "/".
+
 |===
 
 == RabbitMQ MailQueue Configuration
