--- a/server/apps/cassandra-app/README.adoc
+++ b/server/apps/cassandra-app/README.adoc
@@ -22,12 +22,12 @@ Firstly, create your own user network on Docker for the James environment:
 Third party compulsory dependencies:
 
  * Cassandra 3.11.10
- * ElasticSearch 7.10.2
+ * OpenSearch 2.1.0
 
 [source]
 ----
 $ docker run -d --network james -p 9042:9042 --name=cassandra cassandra:3.11.10
-$ docker run -d --network james -p 9200:9200 --name=elasticsearch --env 'discovery.type=single-node' docker.elastic.co/elasticsearch/elasticsearch:7.10.2
+$ docker run -d --network james -p 9200:9200 --name=opensearch --env 'discovery.type=single-node' opensearchproject/opensearch:2.1.0
 ----
 
 == Running
