--- a/server/apps/distributed-app/docs/modules/ROOT/pages/run/k8s-secrets.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/run/k8s-secrets.adoc
@@ -23,9 +23,9 @@ https://github.com/jkroepke/helm-secrets
 
 |cassandraPassword |Mandatory |The password fort Cassandra access
 
-|esUser |Optional |The user for Elasticsearch access
+|esUser |Optional |The user for OpenSearch access
 
-|esPassword |Optional |The password for Elasticsearch access
+|esPassword |Optional |The password for OpenSearch access
 
 |dkimPrivateKey |Optional |The private key for the generated DKIM
 
