--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -26,7 +26,7 @@
 *** Storage dependencies
 **** xref:configure/blobstore.adoc[blobstore.properties]
 **** xref:configure/cassandra.adoc[cassandra.properties]
-**** xref:configure/elasticsearch.adoc[elasticsearch.properties]
+**** xref:configure/opensearch.adoc[opensearch.properties]
 **** xref:configure/rabbitmq.adoc[rabbitmq.properties]
 **** xref:configure/redis.adoc[redis.properties]
 **** xref:configure/tika.adoc[tika.properties]
