--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/opensearch.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/opensearch.adoc
@@ -1,89 +1,89 @@
-= Distributed James Server &mdash; elasticsearch.properties
-:navtitle: elasticsearch.properties
+= Distributed James Server &mdash; opensearch.properties
+:navtitle: opensearch.properties
 
-Consult this link:https://github.com/apache/james-project/blob/master/server/apps/distributed-app/sample-configuration/elasticsearch.properties[example]
+Consult this link:https://github.com/apache/james-project/blob/master/server/apps/distributed-app/sample-configuration/opensearch.properties[example]
 to get some examples and hints.
 
-If you want more explanation about ElasticSearch configuration, you should visit the dedicated https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html[documentation].
+If you want more explanation about OpenSearch configuration, you should visit the dedicated https://opensearch.org/[documentation].
 
-== ElasticSearch Configuration
+== OpenSearch Configuration
 
-This file section is used to configure the connection tp an ElasticSearch cluster.
+This file section is used to configure the connection tp an OpenSearch cluster.
 
 Here are the properties allowing to do so :
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.clusterName
+| opensearch.clusterName
 | Is the name of the cluster used by James.
 
-| elasticsearch.nb.shards
+| opensearch.nb.shards
 | Number of shards for index provisionned by James
 
-| elasticsearch.nb.replica
+| opensearch.nb.replica
 | Number of replica for index provisionned by James (default: 0)
 
-| elasticsearch.index.waitForActiveShards
+| opensearch.index.waitForActiveShards
 | Wait for a certain number of active shard copies before proceeding with the operation. Defaults to 1.
 You may consult the https://www.elastic.co/guide/en/elasticsearch/reference/7.10/docs-index_.html#active-shards[documentation] for more information.
 
-| elasticsearch.retryConnection.maxRetries
+| opensearch.retryConnection.maxRetries
 | Number of retries when connecting the cluster
 
-| elasticsearch.retryConnection.minDelay
+| opensearch.retryConnection.minDelay
 | Minimum delay between connection attempts
 
-| elasticsearch.max.connections
-| Maximum count of HTTP connections allowed for the ElasticSearch driver. Optional integer, if unspecified driver defaults
+| opensearch.max.connections
+| Maximum count of HTTP connections allowed for the OpenSearch driver. Optional integer, if unspecified driver defaults
 applies (30 connections).
 
-| elasticsearch.max.connections.per.hosts
-| Maximum count of HTTP connections per host allowed for the ElasticSearch driver. Optional integer, if unspecified driver defaults
+| opensearch.max.connections.per.hosts
+| Maximum count of HTTP connections per host allowed for the OpenSearch driver. Optional integer, if unspecified driver defaults
 applies (10 connections).
 
 |===
 
 === Mailbox search
 
-The main use of ElasticSearch within the Distributed Server is indexing the mailbox content of users in order to enable
+The main use of OpenSearch within the Distributed Server is indexing the mailbox content of users in order to enable
 powerful and efficient full-text search of the mailbox content.
 
 Data indexing is performed asynchronously in a reliable fashion via a MailboxListener.
 
-Here are the properties related to the use of ElasticSearch for Mailbox Search:
+Here are the properties related to the use of OpenSearch for Mailbox Search:
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.index.mailbox.name
+| opensearch.index.mailbox.name
 | Name of the mailbox index backed by the alias. It will be created if missing.
 
-| elasticsearch.index.name
-| *Deprecated* Use *elasticsearch.index.mailbox.name* instead.
+| opensearch.index.name
+| *Deprecated* Use *opensearch.index.mailbox.name* instead.
 Name of the mailbox index backed by the alias. It will be created if missing.
 
-| elasticsearch.alias.read.mailbox.name
+| opensearch.alias.read.mailbox.name
 | Name of the alias to use by Apache James for mailbox reads. It will be created if missing.
 The target of the alias is the index name configured above.
 
-| elasticsearch.alias.read.name
-| *Deprecated* Use *elasticsearch.alias.read.mailbox.name* instead.
+| opensearch.alias.read.name
+| *Deprecated* Use *opensearch.alias.read.mailbox.name* instead.
 Name of the alias to use by Apache James for mailbox reads. It will be created if missing.
 The target of the alias is the index name configured above.
 
-| elasticsearch.alias.write.mailbox.name
+| opensearch.alias.write.mailbox.name
 | Name of the alias to use by Apache James for mailbox writes. It will be created if missing.
 The target of the alias is the index name configured above.
 
-| elasticsearch.alias.write.name
-| *Deprecated* Use *elasticsearch.alias.write.mailbox.name* instead.
+| opensearch.alias.write.name
+| *Deprecated* Use *opensearch.alias.write.mailbox.name* instead.
 Name of the alias to use by Apache James for mailbox writes. It will be created if missing.
 The target of the alias is the index name configured above.
 
-| elasticsearch.indexAttachments
+| opensearch.indexAttachments
 | Indicates if you wish to index attachments or not (default: true).
 |===
 
@@ -95,67 +95,39 @@ Users quota are asynchronously indexed upon quota changes via a dedicated Mailbo
 
 The following properties affect quota search :
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.index.quota.ratio.name
-| Specify the ElasticSearch alias name used for quotas
+| opensearch.index.quota.ratio.name
+| Specify the OpenSearch alias name used for quotas
 
-| elasticsearch.alias.read.quota.ratio.name
-| Specify the ElasticSearch alias name used for reading quotas
+| opensearch.alias.read.quota.ratio.name
+| Specify the OpenSearch alias name used for reading quotas
 
-| elasticsearch.alias.write.quota.ratio.name
-| Specify the ElasticSearch alias name used for writing quotas
+| opensearch.alias.write.quota.ratio.name
+| Specify the OpenSearch alias name used for writing quotas
 |===
 
-=== Disabling ElasticSearch
+=== Disabling OpenSearch
 
-ElasticSearch component can be disabled but consider it would make search feature to not work. In particular it will break JMAP protocol and SEARCH IMAP comment in an nondeterministic way.
+OpenSearch component can be disabled but consider it would make search feature to not work. In particular it will break JMAP protocol and SEARCH IMAP comment in an nondeterministic way.
 This is controlled in the `search.properties` file via the `implementation` property (defaults
-to `ElasticSearch`). Setting this configuration parameter to `scanning` will effectively disable ElasticSearch, no
+to `OpenSearch`). Setting this configuration parameter to `scanning` will effectively disable OpenSearch, no
 further indexation will be done however searches will rely on the scrolling search, leading to expensive and longer
-searches. Disabling ElasticSearch requires no extra action, however
-xref:operate/webadmin.adoc#reindexing_all_mails[a full re-indexing]needs to be carried out when enabling ElasticSearch.
-
-== Exporting metrics directly to ElasticSearch
-
-WARNING: A separate ElasticSearch server is required, as an ElasticSearch 6.3 is needed, which is
-not compatible with ElasticSearch 7.10, required by James.
-
-For configuring the metric reporting on ElasticSearch :
-
-.elasticsearch.properties content
-|===
-| Property name | explanation
-
-| elasticsearch.http.host
-| Optional. Host to report metrics on. Defaults to master host. Must be specified if metric export to ElasticSearch is enabled.
-
-| elasticsearch.http.port
-| Optional. Http port to use for publishing metrics. Must be specified if metric export to ElasticSearch is enabled.
-
-| elasticsearch.metrics.reports.enabled
-| Optional. Boolean value. Enables metrics reporting. Defaults to false.
-
-| elasticsearch.metrics.reports.period
-| Optional. Seconds between metric reports. Defaults to 60 seconds.
-
-| elasticsearch.metrics.reports.index
-| Optional. Index to publish metrics on. Defaults to `james-metrics`.
-
-|===
+searches. Disabling OpenSearch requires no extra action, however
+xref:operate/webadmin.adoc#reindexing_all_mails[a full re-indexing]needs to be carried out when enabling OpenSearch.
 
 == SSL Trusting Configuration
 
 By default, James will use the system TrustStore to validate https server certificates, if the certificate on
 ES side is already in the system TrustStore, you can leave the sslValidationStrategy property empty or set it to default.
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.hostScheme.https.sslValidationStrategy
+| opensearch.hostScheme.https.sslValidationStrategy
 | Optional. Accept only *default*, *ignore*, *override*. Default is *default*. default: Use the default SSL TrustStore of the system.
 ignore: Ignore SSL Validation check (not recommended).
 override: Override the SSL Context to use a custom TrustStore containing ES server's certificate.
@@ -180,18 +152,18 @@ When there is a TrustStore file and the password to read, fill two options *trus
 and *trustStorePassword* with the TrustStore location and the password. ES client will accept
 the certificate of ES service.
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.hostScheme.https.trustStorePath
-| Optional. Use it when https is configured in elasticsearch.hostScheme, and sslValidationStrategy is *override*
-Configure Elasticsearch rest client to use this trustStore file to recognize nginx's ssl certificate.
+| opensearch.hostScheme.https.trustStorePath
+| Optional. Use it when https is configured in opensearch.hostScheme, and sslValidationStrategy is *override*
+Configure OpenSearch rest client to use this trustStore file to recognize nginx's ssl certificate.
 Once you chose *override*, you need to specify both trustStorePath and trustStorePassword.
 
-| elasticsearch.hostScheme.https.trustStorePassword
-| Optional. Use it when https is configured in elasticsearch.hostScheme, and sslValidationStrategy is *override*
-Configure Elasticsearch rest client to use this trustStore file with the specified password.
+| opensearch.hostScheme.https.trustStorePassword
+| Optional. Use it when https is configured in opensearch.hostScheme, and sslValidationStrategy is *override*
+Configure OpenSearch rest client to use this trustStore file with the specified password.
 Once you chose *override*, you need to specify both trustStorePath and trustStorePassword.
 
 |===
@@ -199,11 +171,11 @@ Once you chose *override*, you need to specify both trustStorePath and trustStor
 During SSL handshaking, the client can determine whether accept or reject connecting to a remote server by its hostname.
 You can configure to use which HostNameVerifier in the client.
 
-.elasticsearch.properties content
+.opensearch.properties content
 |===
 | Property name | explanation
 
-| elasticsearch.hostScheme.https.hostNameVerifier
+| opensearch.hostScheme.https.hostNameVerifier
 | Optional. Default is *default*. default: using the default hostname verifier provided by apache http client.
 accept_any_hostname: accept any host (not recommended).
 
@@ -212,7 +184,7 @@ accept_any_hostname: accept any host (not recommended).
 == Search overrides
 
 *Search overrides* allow resolution of predefined search queries against alternative sources of data
-and allow bypassing ElasticSearch. This is useful to handle most resynchronisation queries that
+and allow bypassing OpenSearch. This is useful to handle most resynchronisation queries that
 are simple enough to be resolved against Cassandra.
 
 Possible values are:
@@ -228,25 +200,25 @@ Possible values are:
  Lists all messages and filters out deleted message thus this is based on the following heuristic: most messages are not marked as deleted.
   - `org.apache.james.mailbox.cassandra.search.UnseenSearchOverride`. List unseen messages in the corresponding cassandra projection.
 
-Please note that custom overrides can be defined here. `elasticsearch.search.overrides` allow specifying search overrides and is a
+Please note that custom overrides can be defined here. `opensearch.search.overrides` allow specifying search overrides and is a
 coma separated list of search override FQDNs. Default to none.
 
 EG:
 
 ----
-elasticsearch.search.overrides=org.apache.james.mailbox.cassandra.search.AllSearchOverride,org.apache.james.mailbox.cassandra.search.DeletedSearchOverride, org.apache.james.mailbox.cassandra.search.DeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.NotDeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.UidSearchOverride,org.apache.james.mailbox.cassandra.search.UnseenSearchOverride
+opensearch.search.overrides=org.apache.james.mailbox.cassandra.search.AllSearchOverride,org.apache.james.mailbox.cassandra.search.DeletedSearchOverride, org.apache.james.mailbox.cassandra.search.DeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.NotDeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.UidSearchOverride,org.apache.james.mailbox.cassandra.search.UnseenSearchOverride
 ----
 
 == Configure dedicated language analyzers for mailbox index
 
-Elasticsearch supports various language analyzers out of the box: https://www.elastic.co/guide/en/elasticsearch/reference/current/analysis-lang-analyzer.html.
+OpenSearch supports various language analyzers out of the box: https://www.elastic.co/guide/en/elasticsearch/reference/current/analysis-lang-analyzer.html.
 
 James could utilize this to improve the user searching experience upon his language.
 
 While one could modify mailbox index mapping programmatically to customize this behavior, here we should just document a manual way to archive this without breaking our common index' mapping code.
 
 The idea is modifying mailbox index mappings with the target language analyzer as a JSON file, then submit it directly
-to ElasticSearch via cURL command to create the mailbox index before James start. Let's adapt dedicated language analyzers
+to OpenSearch via cURL command to create the mailbox index before James start. Let's adapt dedicated language analyzers
 where appropriate for the following fields:
 
 .Language analyzers propose change
@@ -285,7 +257,7 @@ where appropriate for the following fields:
 In there:
 
   - `keep_mail_and_url` and `standard` are our current analyzers for mailbox index.
-  - `language_a` analyzer: the built-in analyzer of Elasticsearch. EG: `french`
+  - `language_a` analyzer: the built-in analyzer of OpenSearch. EG: `french`
   - `keep_mail_and_url_language_a` analyzer: a custom of `keep_mail_and_url` analyzer with some language filters.Every language has
 their own filters so please have a look at filters which your language need to add. EG which need to be added for French:
 ----
