--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
@@ -73,7 +73,7 @@ explanations.
 Supported health checks include:
 
 * *Cassandra backend*: Cassandra storage.
-* *ElasticSearch Backend*: ElasticSearch storage.
+* *OpenSearch Backend*: OpenSearch storage.
 * *EventDeadLettersHealthCheck*
 * *Guice application lifecycle*
 * *JPA Backend*: JPA storage.
@@ -1312,7 +1312,7 @@ Since this is a somewhat expensive operation, the task is throttled to one user
 per second. You may speed it up via `usersPerSecond=10` for example. But keep
 in mind that a high rate might overwhelm your database or blob store.
 
-*Scanning search only:* (unsupported for Lucene and ElasticSearch search implementations) +
+*Scanning search only:* (unsupported for Lucene and OpenSearch search implementations) +
 Some mail clients can add an `Expires` header (RFC 4021) to their messages.
 Instead of specifying an absolute age, you may choose to delete only such
 messages where the expiration date from this header lies in the past:
