--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/listeners.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/listeners.adoc
@@ -52,6 +52,27 @@ Example:
 Please note that a `spamassassin.properties` file is needed. Read also
 xref:configure/spam.adoc[this page] for extra configuration required to support this feature.
 
+=== RSpamDListener
+
+Provides HAM/SPAM feedback to a RSpamD server depending on user actions.
+
+This MailboxListener is supported.
+
+Example:
+
+....
+<listeners>
+  <!-- ... -->
+  <listener>
+    <class>org.apache.james.rspamd.RSpamDListener</class>
+  </listener>
+</listeners>
+....
+
+Please note that a `rspamd.properties` file is needed. Read also
+xref:configure/spam.adoc[this page] for extra configuration required to support this feature.
+
+
 === MailboxOperationLoggingListener
 
 Provides more insights on mailbox operationsby logging them.
